The 4 sliced
